Fix buttons not loading properly on iOS/Safari.

--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ button:hover{
     }
     button{
         font-size: 2.5rem;
+        overflow: overlay;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     #allClear{
         font-size: 2rem;
